src/k8s/apps/services/mosquitto/manifests/service-metrics.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-metrics
  namespace: services
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: metrics
      port: 9234
      targetPort: metrics
      protocol: TCP
