src/k8s/apps/services/mosquitto/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: services
  labels:
    app: mosquitto
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
      nodePort: 30001
      protocol: TCP
    - name: websocket
      port: 9001
      targetPort: websocket
      protocol: TCP
